2010-01-06	Rodrigo B. de Oliveira <rodrigo@unity.com>

	* Mono.Cecil.csproj
	  Mono.Cecil/NameObjectCollectionBase.cs
	  Mono.Cecil/BaseAssemblyResolver.cs
	  Mono.Cecil/DefaultAssemblyResolver.cs:
	  	support for compiling Mono.Cecil without
	  	any references to System.dll using the newly introduced
	  	"Debug - No System.dll" configuration in Mono.Cecil.csproj;

2009-12-14  Sebastien Pouliot  <sebastien at ximian.com>

	* Mono.Cecil/BaseAssemblyResolver.cs: Update to .net fx 4 beta2
	version number and reduce code duplication.

2009-10-25  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/BaseAssemblyResolver.cs
	  Mono.Cecil/StructureReader.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs:
		update .net 4.0 version to beta 2.

2009-08-18  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.Cecil/BaseAssemblyResolver.cs: Search GACs specified in the
	  MONO_GAC_PREFIX environment variable.

2009-08-06  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/BaseAssemblyResolver.cs:
	Do not crash when the GAC folder can't be found.

2009-07-28  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/AssemblyStripper.cs: Make all methods share
	the same body.

2009-07-16  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/AssemblyFactory.cs
	* Mono.Cecil.Metadata/MetadataWriter.cs
	* Mono.Cecil.Binary/ImageWriter.cs:
		Support for properly writing 4.0 dlls.
		Patch by Carlo Kok  <ck@remobjects.com>.

2009-06-05  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/BaseAssemblyResolver.cs: properly look for the 4.0 corlib
	when running on Mono.

2009-06-03  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/MetadataResolver.cs: add support for resolving from
	a ModuleReference.

2009-06-03  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/BaseAssemblyResolver.cs: look for 4.0.0.0 assemblies.

2009-05-21  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs: add support for type forwarders.

2009-05-19  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/TargetRuntime.cs
	* Mono.Cecil/StructureReader.cs